--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       }
 
       render() {
-
+        console.log(this.state.checkboxGroup)
         if ( this.state.showForm ) {
           return (
             <form onSubmit={this.handleSubmit} className='faveSites'>
